--- a/ordercleanup/templates/home.html
+++ b/ordercleanup/templates/home.html
@@ -121,7 +121,7 @@ form input {
             <h1>Order Cleanup</h1>
           </div>
           
-            <img src="../static/logo.png" alt="CDL Logisitics">
+            <img src="/ordercleanup/static/logo.png" alt="CDL Logisitics">
           
           
           
